--- a/arya/cli/Cargo.toml
+++ b/arya/cli/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cli"
 version = "0.1.0"
 edition = "2024"
+authors = ["Erik Schierboom <erik_schierboom@hotmail.com>"]
 
 [dependencies]
 compiler = { path = "../compiler" }
