--- a/arya/compiler/Cargo.toml
+++ b/arya/compiler/Cargo.toml
@@ -2,5 +2,6 @@
 name = "compiler"
 version = "0.1.0"
 edition = "2024"
+authors = ["Erik Schierboom <erik_schierboom@hotmail.com>"]
 
 [dependencies]
