--- a/arya/website/Cargo.toml
+++ b/arya/website/Cargo.toml
@@ -11,6 +11,7 @@ leptos_router = { version = "0.8" }
 console_log = "1"
 log = "0.4"
 console_error_panic_hook = "0.1"
+compiler = { path = "../compiler" }
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
