--- a/boomscript/Cargo.toml
+++ b/boomscript/Cargo.toml
@@ -1,3 +1,6 @@
-[workspace]
-resolver = "3"
-members = ["cli", "compiler"]
+[package]
+name = "boomscript"
+version = "0.1.0"
+edition = "2024"
+
+[dependencies]
