tiny-basic/03: solve

--- a/tiny-systems/02-tiny-basic/tasks/tinybasic.fsproj
+++ b/tiny-systems/02-tiny-basic/tasks/tinybasic.fsproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="02-program-editing.fs" />
+    <Compile Include="03-conditionals-and-vars.fs" />
   </ItemGroup>
 
 </Project>
