--- a/tiny-systems/02-tiny-basic/tasks/tinybasic.fsproj
+++ b/tiny-systems/02-tiny-basic/tasks/tinybasic.fsproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="04-random-stars.fs" />
+    <Compile Include="05-nim-game.fs" />
   </ItemGroup>
 
 </Project>
