--- a/create-your-own-lang-with-rust/calculator/Cargo.toml
+++ b/create-your-own-lang-with-rust/calculator/Cargo.toml
@@ -17,6 +17,10 @@ home = "=0.5.9"
 # LLVM bindings - optional, requires nightly Rust
 # Update feature to match your llvm-config --version
 inkwell = { version = "0.7.1", features = ["llvm20-1"], optional = true }
+cranelift = { version = "0.127.0", optional = true }
+cranelift-jit = { version = "0.127.0", optional = true }
+cranelift-module = { version =  "0.127.0", optional = true }
+cranelift-native ={ version =  "0.127.0", optional = true }
 
 [lib]
 path = "src/lib.rs"
@@ -35,3 +39,4 @@ default = ["interpreter"]
 jit = ["inkwell"]
 interpreter = []
 vm = []
+craneliftjit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
