More cranelift work

--- a/create-your-own-lang-with-rust/calculator/Cargo.toml
+++ b/create-your-own-lang-with-rust/calculator/Cargo.toml
@@ -39,4 +39,4 @@ default = ["interpreter"]
 jit = ["inkwell"]
 interpreter = []
 vm = []
-craneliftjit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
+cranelift_jit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
